--- a/ToDoApp/accounts/templates/accounts/profile.html
+++ b/ToDoApp/accounts/templates/accounts/profile.html
@@ -1,6 +1,58 @@
-<h2>Profile</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Update Profile</button>
-</form>
+{% extends 'base.html' %}
+
+{% block title %}Profile{% endblock %}
+
+{% block content %}
+<div class="container py-5">
+    <div class="row">
+        <div class="col-md-4 text-center">
+            <h3 class="mb-3">Profile Picture</h3>
+            <img 
+                src="{{ user.profile.profile_picture.url if user.profile.profile_picture else 'https://via.placeholder.com/150' }}" 
+                class="rounded-circle img-thumbnail mb-3" 
+                alt="Profile Picture" 
+                width="150" 
+                height="150">
+            <p class="text-muted">Update your profile picture below:</p>
+        </div>
+        
+        <div class="col-md-8">
+            <h3 class="mb-4">Update Profile Information</h3>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <h5>Personal Information</h5>
+                    <div class="row">
+                        <div class="col-md-6">
+                            {{ user_form.username.label_tag }}
+                            {{ user_form.username|add_class:"form-control" }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ user_form.email.label_tag }}
+                            {{ user_form.email|add_class:"form-control" }}
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="mb-3">
+                    <h5>Profile Details</h5>
+                    <div class="row">
+                        <div class="col-md-6">
+                            {{ profile_form.birth_date.label_tag }}
+                            {{ profile_form.birth_date|add_class:"form-control" }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ profile_form.profile_picture.label_tag }}
+                            {{ profile_form.profile_picture|add_class:"form-control" }}
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="text-end">
+                    <button type="submit" class="btn btn-primary">Update Profile</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock %}
