--- a/ToDoApp/accounts/templates/accounts/profile.html
+++ b/ToDoApp/accounts/templates/accounts/profile.html
@@ -4,50 +4,64 @@
 
 {% block content %}
 <div class="container py-5">
+    <h2 class="text-center mb-4">Your Profile</h2>
+
     <div class="row">
-        <div class="col-md-4 text-center">
-            <h3 class="mb-3">Profile Picture</h3>
-            <img 
-                src="{{ user.profile.profile_picture.url if user.profile.profile_picture else 'https://via.placeholder.com/150' }}" 
-                class="rounded-circle img-thumbnail mb-3" 
-                alt="Profile Picture" 
-                width="150" 
-                height="150">
-            <p class="text-muted">Update your profile picture below:</p>
+        <!-- Profile Information Display -->
+        <div class="col-md-6">
+            <h4>Personal Information</h4>
+            <p><strong>Username:</strong> {{ user.username }}</p>
+            <p><strong>Email:</strong> {{ user.email }}</p>
+            <p><strong>Birth Date:</strong> {{ user.profile.birth_date }}</p>
+            <div class="mb-3">
+                <h5>Profile Picture</h5>
+                {% if user.profile.profile_picture %}
+                    <img 
+                        src="{{ user.profile.profile_picture.url }}" 
+                        class="rounded-circle img-thumbnail mb-3" 
+                        alt="Profile Picture" 
+                        width="150" 
+                        height="150">
+                {% else %}
+                    <img 
+                        src="https://via.placeholder.com/150" 
+                        class="rounded-circle img-thumbnail mb-3" 
+                        alt="Default Profile Picture" 
+                        width="150" 
+                        height="150">
+                {% endif %}
+            </div>
         </div>
-        
-        <div class="col-md-8">
-            <h3 class="mb-4">Update Profile Information</h3>
+
+        <!-- Profile Update Form -->
+        <div class="col-md-6">
+            <h4>Update Your Information</h4>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="mb-3">
                     <h5>Personal Information</h5>
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ user_form.username.label_tag }}
-                            {{ user_form.username|add_class:"form-control" }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ user_form.email.label_tag }}
-                            {{ user_form.email|add_class:"form-control" }}
-                        </div>
+                    <div class="form-group">
+                        {{ user_form.username.label }} 
+                        {{ user_form.username }}
+                    </div>
+                    <div class="form-group">
+                        {{ user_form.email.label }} 
+                        {{ user_form.email }}
                     </div>
                 </div>
-                
+
                 <div class="mb-3">
                     <h5>Profile Details</h5>
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ profile_form.birth_date.label_tag }}
-                            {{ profile_form.birth_date|add_class:"form-control" }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ profile_form.profile_picture.label_tag }}
-                            {{ profile_form.profile_picture|add_class:"form-control" }}
-                        </div>
+                    <div class="form-group">
+                        {{ profile_form.birth_date.label }} 
+                        {{ profile_form.birth_date }}
+                    </div>
+                    <div class="form-group">
+                        {{ profile_form.profile_picture.label }} 
+                        {{ profile_form.profile_picture }}
                     </div>
                 </div>
-                
+
                 <div class="text-end">
                     <button type="submit" class="btn btn-primary">Update Profile</button>
                 </div>
