--- a/ToDoApp/dashboard/templates/dashboard/dashboard.html
+++ b/ToDoApp/dashboard/templates/dashboard/dashboard.html
@@ -9,17 +9,19 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
-        <div class="col-md-3">
+        <div class="col-12 col-md-3">
             {% include 'dashboard/partials/_sidebar.html' %}
         </div>
         
         <!-- Main Content -->
-        <div class="col-md-9">
+         
+        <div class="col-12 col-md-9">
             <h1>Welcome to your Dashboard, {{ user.username }}!</h1>
-            <p>Your tasks and profile details will appear here.</p>
+            {% include 'dashboard/partials/_task-list.html' %}
+
         </div>
     </div>
 </div>
 {% endblock %}
 
-{% block js_files %}{% endblock %}
+{% block js_files %}<script src="{% static 'dashboard/js/script.js' %}"></script>{% endblock %}
