--- a/ToDoApp/dashboard/templates/dashboard/partials/_sidebar.html
+++ b/ToDoApp/dashboard/templates/dashboard/partials/_sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 250px; height: 100vh;">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <span class="fs-4">Dashboard</span>
+        <span class="fs-4">Work Space</span>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
@@ -11,7 +11,7 @@
         </li>
         <li>
             <a href="#" class="nav-link link-dark">
-                Profile
+                Calendar
             </a>
         </li>
         <li>
